fixxo fixed text overflow in section and aligment for section 1 & 2

--- a/css/scss/sections/_featuredproducts.scss
+++ b/css/scss/sections/_featuredproducts.scss
@@ -62,36 +62,36 @@
                             top: 10px;
                             right: 15px;
                         }
-                    }
 
-                    .menu-icons .menu-link {
-                        height: 50px;
-                        width: 50px;
-                        font-size: 22px;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        background-color: #ffffff;
-                        color: #222529;
-                        border-radius: 50%;
-                        text-decoration: none;
-                        box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.15);
-                        margin-left: 1rem;
-                        transition: background-color 0.25s, color 0.20s;
-                        margin-bottom: 1rem;
-
-                        @include md {
-                            font-size: 16px;
-                            height: 36px;
-                            width: 36px;
-                            margin-bottom: 8px;
-                        }
-
-                        &:hover,
-                        &.active {
-                            background-color: #222529;
-                            color: #ffffff;
+                        .menu-link {
+                            height: 50px;
+                            width: 50px;
+                            font-size: 22px;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            background-color: #ffffff;
+                            color: #222529;
+                            border-radius: 50%;
                             text-decoration: none;
+                            box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.15);
+                            margin-left: 1rem;
+                            transition: background-color 0.25s, color 0.20s;
+                            margin-bottom: 1rem;
+
+                            @include md {
+                                font-size: 16px;
+                                height: 36px;
+                                width: 36px;
+                                margin-bottom: 8px;
+                            }
+
+                            &:hover,
+                            &.active {
+                                background-color: #222529;
+                                color: #ffffff;
+                                text-decoration: none;
+                            }
                         }
                     }
 
@@ -123,6 +123,7 @@
                 .product-card-body {
                     text-align: center;
                     height: 35%;
+
                     .product-card-category {
                         font-size: 16px;
                         font-weight: 500;
